edit homes page

--- a/Public/homes.html
+++ b/Public/homes.html
@@ -56,12 +56,10 @@
     <figure>
     <h2>Why Invest In Our Community?</h2>
     <ul>
-      <li>Our community project is socially responsible and will devote a portion of revenue to meditation projects both locally and around the world.</li>
-      <li>Investment partners receive a range of benefits at One Way Path Group meditation centres.</li>
-      <li>Our projects experience 10-20% lower pre-development costs because we provide legal advice through a partner law firm, deferring legal costs until after the project is sold.</li>
-      <li>Our project has a clear business plan with a defined endpoint to facilitate investor payouts.</li>
-      <li>Stoney Creek is a proven and resilient real estate market.</li>
-      <li>Investments in our community are accessible because eligible government regulated investment accounts. </li>
+      <li>Our community project will be close to the Khmer Krom Buddhist Temple.</li>
+      <li>We support the Temple in its plans for growth.</li>
+	  <li>Members of the Temple get priorty reservations which may be at lower cost than publically available prices</li>
+      <li>Stoney Creek is a proven and strong real estate market.</li>
     </ul>
     </figure>
   </section>
