add link on home (index.html)

--- a/Public/homes.html
+++ b/Public/homes.html
@@ -12,7 +12,7 @@
 <nav>
   <button> <img src="./homes/images/menu-icon.png" alt="Menu selector"> </button>
   <div class="scroll-menu-container">
-    <a href="#home" data-active="1">
+    <a href="index.html">
     <figure> 
       <img src="./homes/images/home-icon-dark.png" alt="Home icon"> 
       <img src="./homes/images/home-icon.png" alt="Home icon"> 
@@ -24,7 +24,7 @@
       <img src="./homes/images/Peterborough-Ontario-menu-gold.png" alt="Home icon"> </figure>
     <h1>homes</h1> </a>
 
-    <a href="#benifits" data-active="1">
+    <a href="#benifits">
     <figure> <img src="./homes/images/benifits.png" alt="Home icon"> <img src="./homes/images/benifits-gold.png" alt="Home icon"> </figure>
     <h1>Benifits</h1> </a> 
     
@@ -32,7 +32,7 @@
     <figure> <img src="./homes/images/values-menu.png" alt="Bio icon"> <img src="./homes/images/values-menu-gold.png" alt="Bio icon"> </figure>
     <h1>Values</h1> </a> 
 
-    <a href="#team" data-active="1">
+    <a href="#team">
     <figure> <img src="./homes/images/bio-icon-dark.png" alt="Home icon"> <img src="./homes/images/bio-icon-gold.png" alt="Home icon"> </figure>
     <h1>Team</h1> </a> 
      
