add mediation center in menu

--- a/Public/buddhavipassana-2.html
+++ b/Public/buddhavipassana-2.html
@@ -18,6 +18,11 @@
     <span>home</span> 
   </a> 
       <div>
+
+        <a href="meditation.html" id="">
+    <figure> <img src="./buddhavipassana-2/images/menu-mc-on-num.png" alt="Meditation icon"> <img src="./buddhavipassana-2/images/menu-mc-on-num-hover.png" alt="Meditation icon"> </figure>
+    <span>Meditation <br>Centres</span> </a>
+
          <a href="#home" id="" data-active="1">
           <figure> <img src="./buddhavipassana-2/images/mc-buddhavipassana.png" alt="buddhavipassana icon"> <img src="./buddhavipassana-2/images/mc-buddhavipassana-gold.png" alt="buddhavipassana icon"> </figure>
           <span>Buddhavipassana</span> 
