add mediation center in menu

--- a/Public/khmerkromtemple.html
+++ b/Public/khmerkromtemple.html
@@ -12,10 +12,15 @@
 <nav> 
   <button> <img src="./Khmer-Krom-Buddhist-Temple/images/menu-icon.png" alt="Menu selector"> </button>
 
-  <div class="scroll-menu-container"> <a href="#home" >
+  <div class="scroll-menu-container"> <a href="index.html" >
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/home-icon-dark.png" alt="Home icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/home-icon.png" alt="Home icon"> </figure>
     <h1>home</h1> </a> 
     <div>
+
+    <a href="meditation.html" id="">
+    <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/menu-mc-on-num.png" alt="Meditation icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/menu-mc-on-num-hover.png" alt="Meditation icon"> </figure>
+    <h1>Meditation <br>Centres</h1> </a>
+
     <a href="#Khmer" id="" data-active="1">
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/MC-khmer-krom-menu.png" alt="Bio icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/MC-khmer-krom-gold.png" alt="Bio icon"> </figure>
     <h1>Khmer Krom <br>Buddhist Temple</h1> </a> 
