change active tab on menu

--- a/Public/meditation.html
+++ b/Public/meditation.html
@@ -11,11 +11,11 @@
 <body>
 <nav> 
   <button> <img src="./owpg-main/images/menu-icon.png" alt="Menu selector"> </button>
-  <div class="scroll-menu-container"> <a href="index.html" data-active="1">
+  <div class="scroll-menu-container"> <a href="index.html" >
     <figure> <img src="./owpg-main/images/home-icon-dark.png" alt="Home icon"> <img src="./owpg-main/images/home-icon.png" alt="Home icon"> </figure>
     <h1>home</h1> </a> 
     
-    <a href="#home" id="">
+    <a href="#home" id="" data-active="1">
     <figure> <img src="./owpg-main/images/menu-mc-on-num.png" alt="Meditation icon"> <img src="./owpg-main/images/menu-mc-on-num-hover.png" alt="Meditation icon"> </figure>
     <h1>Meditation</h1> </a> 
      
