--- a/Public/index.html
+++ b/Public/index.html
@@ -34,7 +34,7 @@
     <h3><img src="./main/images/Barrie-ontario.png" alt="Homeso" title="Homes> <img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"><span>Homes</span></h3>
     <h3><img src="./main/images/gear.png" alt="Services" title="Services" ><span>Services</span></h3>
 -->
-		<figure><p>One Way Path Group is an international real estate development company devoted to public purpose investing. We improve well-being by building liveable, high density communities and providing business services to partner developers.</p></figure>
+		<figure><p>One Way Path Group is an international real estate development company. We improve well-being by building meditation centres and nearby homes for community members.</p></figure>
     <h3><a href="./meditation.html"><img src="./main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><img src="./main/images/mc-on-num-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"><span>Meditation Centres</span></a></h3>
     <h3><a href="./homes.html"><img src="./main/images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><img src="./main/images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario"> <span>Homes</span></a></h3>
     <h3><img src="./main/images/gear-dark.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><span>Services</span></h3>
