--- a/Public/khmerkromtemple.html
+++ b/Public/khmerkromtemple.html
@@ -15,19 +15,20 @@
   <div class="scroll-menu-container"> <a href="index.html" >
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/home-icon-dark.png" alt="Home icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/home-icon.png" alt="Home icon"> </figure>
     <h1>home</h1> </a> 
+   
     <div>
-
     <a href="meditation.html" id="">
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/menu-mc-on-num.png" alt="Meditation icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/menu-mc-on-num-hover.png" alt="Meditation icon"> </figure>
     <h1>Meditation <br>Centres</h1> </a>
-
+    </div>
+    <div id="sub-nav">
     <a href="#Khmer" id="" data-active="1">
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/MC-khmer-krom-menu.png" alt="Bio icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/MC-khmer-krom-gold.png" alt="Bio icon"> </figure>
     <h1>Khmer Krom <br>Buddhist Temple</h1> </a> 
 
      <a href="#about" id="">
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/bio-icon-dark.png" alt="Bio icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/bio-icon-gold.png" alt="Bio icon"> </figure>
-    <h1>Abbot</h1> </a> 
+    <h1>About</h1> </a> 
 
     <a href="#number">
     <figure> <img src="./Khmer-Krom-Buddhist-Temple/images/hashtag-dark.png" alt="Contact icon"> <img src="./Khmer-Krom-Buddhist-Temple/images/hashtag-gold.png" alt="Contact icon"> </figure>
@@ -43,16 +44,16 @@
   <header id="Khmer" data-identifier="page-section">
    
       <h1>Khmer Kampuchea Krom <br>Buddhist Temple</h1>
-      <p>One Way Path Group is working for the Khmer Kampuchea Krom Buddhist Temple in Stoney Creek, (Hamilton), Ontario to expand the Temple and its outreach activities to the surrounding community
+      <p>One Way Path Group is working for the Khmer Kampuchea Krom Buddhist Temple in Stoney Creek, (Hamilton), Ontario to expand the Temple and its outreach activities to the surrounding Khmer community. The Temple, led by its Abbot, Venerable Thach Truong Dhammo is an important community
         <span id="dots">...</span>
-        <span id="more">The Temple, led by its Abbot, Venerable Thach Truong Dhammo is an important community hub for Khmer Canadians, many of whom arrived in Canada as refugees amidst social upheaval in Cambodia and South Vietnam over the last half century. <br><br>In recent years, the Temple is particularly important for a recent wave of refugees, ethnic Khmers who originate from South Vietnam where Therevada Buddhists have experienced extreme discrimination and repression. Since opening in 1999, the Temple has also provided exposure to Buddhist religious and cultural traditions beyond the Khmer community by providing Buddhist teachings in English, Laotian, Thai, Vietnamese along with Khmer languages.<br><br>One Way Path Group is currently assisting the Temple by providing free legal advice and by voluntarily overseeing the city planning process for Temple expansion with the City of Hamilton. We have assisted the Temple in completion with a rezoning of the existing land for institutional use following the purchase of an adjacent property. The second phase of this project is likely to include an architecturally sound redesign of the Temple complex including redesign of existing structures consistent with Khmer Buddhist cultural traditions and to establish a longer-term mass parking solution for the site (e.g., an underground parking garage). </span>
+        <span id="more">community hub for Khmer Canadians, many of whom arrived in Canada as refugees amidst social upheaval in Cambodia and South Vietnam over the last half century. <br><br>In recent years, the Temple is particularly important for a recent wave of refugees, ethnic Khmers who originate from South Vietnam where Therevada Buddhists have experienced extreme discrimination and repression. Since opening in 1999, the Temple has also provided exposure to Buddhist religious and cultural traditions beyond the Khmer community by providing Buddhist teachings in English, Laotian, Thai, Vietnamese along with Khmer languages.<br><br>One Way Path Group is currently assisting the Temple by providing free legal advice and by voluntarily overseeing the city planning process for Temple expansion with the City of Hamilton. We have assisted the Temple in completion with a rezoning of the existing land for institutional use following the purchase of an adjacent property. The second phase of this project is likely to include an architecturally sound redesign of the Temple complex including redesign of existing structures consistent with Khmer Buddhist cultural traditions and to establish a longer-term mass parking solution for the site (e.g., an underground parking garage). </span><button onclick="myFunction()" id="myBtn">Learn more</button>
       </p>
-      <div><button onclick="myFunction()" id="myBtn">Learn more</button></div>
+      
     <img src="./Khmer-Krom-Buddhist-Temple/images/logo-bottom-border-img.png" alt="">
    
     </header>
   <section id="about">
-    <h2>Abbot</h2>
+    <h2>About</h2>
     <div><img src="./Khmer-Krom-Buddhist-Temple/images/Dhammo-2016.jpeg">
       <h3>Ven. Dhammo Truong Thach</h3>
       <p><b>Venerable Dhammo</b> was born in 1963, in Bac Lieu province and educated in the Mekong Delta, Southern Vietnam, Kampuchea Krom. He was ordained as Samanera(novice monk) in 1980, and took higher ordination as a Theravada Buddhist monk in 1985 at the age of 21. He was trained by the Late Most Venerable Master Sangha Pindito, DanhPhen, at Wat SereyvongsaButhleThmay. Because of social upheaval in and around Vietnam, he fled to Cambodia for safety and eventually crossed the border to the Dangkek Refugee Camp in Thailand. It took five years before he was granted Refugee status as an Immigrant under the protection of Canada in late 1990.</p>
@@ -79,7 +80,7 @@
   </section>
   
   <section id="growth-plan">
-    <h2>Growth Plan</h2>
+    <h2>Onw Way Path Group <br>Led Growth Plan</h2>
     <h3><img src="./Khmer-Krom-Buddhist-Temple/images/parking-lot-development.png">
       <span>parking lot <br>development</span>
     </h3>
@@ -112,7 +113,7 @@ function myFunction() {
     moreText.style.display = "none";
   } else {
     dots.style.display = "none";
-    btnText.innerHTML = "Learn less"; 
+    btnText.innerHTML = "Close"; 
     moreText.style.display = "inline";
   }
 }
