--- a/Public/buddhavipassana-2.html
+++ b/Public/buddhavipassana-2.html
@@ -12,17 +12,18 @@
 <body> 
 <nav>
   <button> <img src="./buddhavipassana-2/images/menu-icon.png" alt="Menu selector"> </button>
-  <div> 
+  <div class="scroll-menu-container"> 
     <a href="index.html" >
     <figure> <img src="./buddhavipassana-2/images/home-icon-dark.png" alt="Home icon"> <img src="./buddhavipassana-2/images/home-icon.png" alt="Home icon"> </figure>
     <span>home</span> 
   </a> 
-      <div>
+       <div> 
 
         <a href="meditation.html" id="">
     <figure> <img src="./buddhavipassana-2/images/menu-mc-on-num.png" alt="Meditation icon"> <img src="./buddhavipassana-2/images/menu-mc-on-num-hover.png" alt="Meditation icon"> </figure>
     <span>Meditation <br>Centres</span> </a>
-
+</div>
+      <div id="sub-nav">
          <a href="#home" id="" data-active="1">
           <figure> <img src="./buddhavipassana-2/images/mc-buddhavipassana.png" alt="buddhavipassana icon"> <img src="./buddhavipassana-2/images/mc-buddhavipassana-gold.png" alt="buddhavipassana icon"> </figure>
           <span>Buddhavipassana</span> 
@@ -40,8 +41,8 @@
           <a href="#team_wrap">
           <figure> <img src="./buddhavipassana-2/images/contact-icon-dark.png" alt="Contact icon"> <img src="./buddhavipassana-2/images/contact-icon-gold.png" alt="Contact icon"> </figure>
           <span>Teachers</span> </a>
-      </div>
     </div>
+    <div>
 </nav>
 <div class="page-container-wrap edge_hill">
   <section id="home" data-identifier="page-section">
