--- a/Public/homes.html
+++ b/Public/homes.html
@@ -12,13 +12,14 @@
 <nav>
   <button> <img src="./homes/images/menu-icon.png" alt="Menu selector"> </button>
   <div class="scroll-menu-container">
+
     <a href="index.html">
     <figure> 
       <img src="./homes/images/home-icon-dark.png" alt="Home icon"> 
       <img src="./homes/images/home-icon.png" alt="Home icon"> 
     </figure>
     <h1></h1> </a> 
-
+<div id="sub-nav">
     <a href="#home" data-active="1">
     <figure> <img src="./homes/images/Peterborough-Ontario-menu.png" alt="Home icon"> 
       <img src="./homes/images/Peterborough-Ontario-menu-gold.png" alt="Home icon"> </figure>
@@ -39,6 +40,7 @@
     <a href="#contact">
     <figure> <img src="./homes/images/contact-icon-dark.png" alt="Contact icon"> <img src="./homes/images/contact-icon-gold.png" alt="Contact icon"> </figure>
     <h1>contact</h1> </a> </div>
+</div>
 </nav>
 <div class="page-container-wrap">
   <section id="home" data-identifier="page-section">
