--- a/Public/khmerkromtemple.html
+++ b/Public/khmerkromtemple.html
@@ -80,7 +80,7 @@
   </section>
   
   <section id="growth-plan">
-    <h2>Onw Way Path Group <br>Led Growth Plan</h2>
+    <h2>Growth Plan</h2>
     <h3><img src="./Khmer-Krom-Buddhist-Temple/images/parking-lot-development.png">
       <span>parking lot <br>development</span>
     </h3>
