--- a/Public/meditation.html
+++ b/Public/meditation.html
@@ -39,15 +39,15 @@
    
 		<h1>Meditation Centers</h1>
       
-			<h2><a href="./khmerkromtemple.html"><img src="./owpg-main/images/MC-khmer-krom.png" alt="Khmer Krom Buddhist Temple" title="MC-khmer-krom" /><img src="./owpg-main/images/MC-khmer-krom-hover.png" alt="Khmer Krom Buddhist Temple" title="MC-khmer-krom" /></a>Khmer Krom Buddhist Temple</h2>
+			<h2><a href="./khmerkromtemple.html"><img src="./owpg-main/images/MC-khmer-krom.png" alt="Khmer Krom Buddhist Temple" title="MC-khmer-krom" /><img src="./owpg-main/images/MC-khmer-krom-hover.png" alt="Khmer Krom Buddhist Temple" title="MC-khmer-krom" />Khmer Krom Buddhist Temple</a></h2>
 
-			<h2><a><img src="./owpg-main/images/mc-chomtong.png" alt="Meditation Residence (Chomtong, Thailand)" title="Purchase and Sale" /><img src="./owpg-main/images/mc-chomtong-hover.png"></a>Meditation Residence (Chomtong, Thailand)</h2>
+			<h2><a><img src="./owpg-main/images/mc-chomtong.png" alt="Meditation Residence (Chomtong, Thailand)" title="Purchase and Sale" /><img src="./owpg-main/images/mc-chomtong-hover.png">Meditation Residence (Chomtong, Thailand)</a></h2>
 
 			<h2><a href="./buddhavipassana-2.html"> <img src="./owpg-main/images/mc-buddhavipassana.png" alt="Buddhavipassana Meditation Center" title="Buddhavipassana Meditation Center" /> 
 			<img src="./owpg-main/images/mc-buddhavipassana-hover.png" alt="Buddhavipassana Meditation Center" title="Buddhavipassana Meditation Center" />Buddhavipassana Meditation Center</a></h2>
 
 			<h2><a><img src="./owpg-main/images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center" />
-        <img src="./owpg-main/images/mc-on-num-hover.png" /></a>On-Num Meditation Center</h2>
+        <img src="./owpg-main/images/mc-on-num-hover.png" />On-Num Meditation Center</a></h2>
     
 <!--
       	<h1>Homes</h1>
