revise buddhavipassana-2.html

--- a/Public/buddhavipassana-2.html
+++ b/Public/buddhavipassana-2.html
@@ -52,7 +52,7 @@
         <p class="text-capitalize">Meditation Centre</p>
       </h1>
       <!-- <p><img src="./buddhavipassana-2/images/logo-bottom-border-img.png" alt="" /></p> -->
-      <figure><span class="text-wrap">The Buddhavipassana Meditaion Centre opened in 2015 to provide an opportunity for people in Southwestern Ontario and New York State to pracice Insight Meditaion in the Northern Thai and Burmese traditions. The Centre has accommodaion for up to five students for periods ranging from a weekend to five days.</span></figure>
+      <figure><span class="text-wrap">The Buddhavipassana Meditaion Centre opened in 2015<!-- to provide an opportunity for people in Southwestern Ontario and New York State to pracice Insight Meditaion in the Northern Thai and Burmese traditions -->. The Centre has accommodaion for up to five students for periods ranging from a weekend to five days.</span></figure>
       <p><img src="./buddhavipassana-2/images/logo-bottom-border-img.png" alt=""></p>
     </figure>
     
