--- a/html-dev/index.html
+++ b/html-dev/index.html
@@ -1,11 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<h1>One Way Path</h1> <h1>Group</h1>
-	<p>One Way Path Group is an international real estate development company. We improve well-being by building meditation centres and nearby homes for community members.</p>
-		<h2><a href="meditation.html"><img src="images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><img src="images/mc-on-num-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario">Meditation Centres</a></h2>
-		<h2><a href="homes.html"><img src="images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><img src="images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario">Homes</a></h2>
-<footer>   
-	<p>Copyright 2019 - 2021</p>
-	<p>onewaypath.com</p>
-</footer>
-
+		<p>One Way Path Group is an international real estate development company. We improve well-being by building meditation centres and nearby homes for community members.</p>
+		<h2><a href="meditation"><img src="images/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><img src="images/mc-on-num-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario">Meditation Centres</a></h2>
+		<h2><a href="./homes"><img src="images/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><img src="images/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario">Homes</a></h2>
