remove fig caption

--- a/html-dev/about.html
+++ b/html-dev/about.html
@@ -2,7 +2,7 @@
 
 	<h2>About One Way Path Group</h2>
 
-	<p><img src="images/ajahn-tong.jpg"><figcaption>Ven. Ajan Tong Sirimangalo</figcaption>One Way Path Group is part of a <a href="images/affiliates.pdf">network of meditation centres and temples</a> run by students of the late Venerable Ajahn Tong Sirimangalo (Ajahn Tong). We operate under the spritual direction of Ajahn Tong, Venerable Ajahn Dhammo Tach Troung of the Khmer Krom Buddhist Temple in Stoney Creek, Ontario and Ajahn Tong's senior diciples, Thanat Chindaporn and Kathryn Johnston Chindaporn.</p> 
+	<figure><img src="images/ajahn-tong.jpg">Ven. Ajan Tong Sirimangalo</figure><p>One Way Path Group is part of a <a href="images/affiliates.pdf">network of meditation centres and temples</a> run by students of the late Venerable Ajahn Tong Sirimangalo (Ajahn Tong). We operate under the spritual direction of Ajahn Tong, Venerable Ajahn Dhammo Tach Troung of the Khmer Krom Buddhist Temple in Stoney Creek, Ontario and Ajahn Tong's senior diciples, Thanat Chindaporn and Kathryn Johnston Chindaporn.</p> 
 
 	<p> The signifacnce of Ajahn Tong's teachings is currenly under reported in popular media but his contribution, and that Thanat and Kathryn Chindaporn, to the field of Buddhist meditation are among the word's most significant of recent times.</p>
 
