set image sizes

--- a/html-dev/index.html
+++ b/html-dev/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 		<p>One Way Path Group is an international real estate development company. We improve well-being by building meditation centres and nearby homes for community members.</p>
-		<h2><a href="meditation"><img src="cimages/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center"><img src="cimages/mc-on-num-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario">Meditation Centres</a></h2>
-		<h2><a href="./homes"><img src="cimages/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario"><img src="cimages/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario">Homes</a></h2>
+		<h2><a href="meditation"><img src="cimages/mc-on-num.png" alt="On-Num Meditation Center" title="On-Num Meditation Center" width="157" height="152"><img src="cimages/mc-on-num-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="157" height="152">Meditation Centres</a></h2>
+		<h2><a href="./homes"><img src="cimages/Barrie-ontario.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="157px" height="152px"><img src="cimages/homes-Barrie-Ontario-hover.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="157px" height="152px">Homes</a></h2>
