--- a/html-dev/index.html
+++ b/html-dev/index.html
@@ -2,4 +2,4 @@
 
 		<p>One Way Path Group is an international real estate development company. We improve well-being by building meditation centres and nearby homes for community members.</p>
 		<h2><a href="meditation"><img src="cimages/mc-on-num-110.png" alt="On-Num Meditation Center" title="On-Num Meditation Center" width="110" height="106"><img src="cimages/mc-on-num-hover-110.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="110" height="106">Meditation Centres</a></h2>
-		<h2><a href="./homes"><img src="cimages/Barrie-ontario-110.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="110" height="106"><img src="cimages/homes-Barrie-Ontario-hover-110.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="110" height="106">Homes</a></h2>
+		<h2><a href="./"><img src="cimages/Barrie-ontario-110.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="110" height="106"><img src="cimages/homes-Barrie-Ontario-hover-110.png" alt="Barrie, Ontario" title="Barrie, Ontario" width="110" height="106">Homes</a></h2>
