--- a/html-dev/contact-us.html
+++ b/html-dev/contact-us.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<h2>Contact</h2>
+<!-- <h2>Contact</h2> -->
 	<p>First Canadian Place</p>
 	<p>100 King Street West, Suite 5600</p>
 	<p>Toronto, Ontario  M5X 1C9</p>
