--- a/html-dev/meditation.html
+++ b/html-dev/meditation.html
@@ -2,4 +2,4 @@
 
 	<p>One Way Path Group operates Buddhavipassana Meditation Centre in Toronto, Ontario (Canada) and is developing On-Nūm Meditation Center in Lieberose, Germany (near Berlin)</p>
 		<h2><a href="https://buddhavipassana.ca"><img src="images/mc-buddhavipassana.png" alt="Buddhavipassana"><img src="images/mc-buddhavipassana-hover.png" alt="Buddhavipassana">Buddhavipassana</a></h2>
-		<h2><a href="https://on-num.de" ><img src="images/mc-on-num.png" alt="On-Nūm"><img src="images/mc-on-num-hover.png" alt="On-Nūm">On-Nūm</a></h2>
+		<h2><a href="./meditation" ><img src="images/mc-on-num.png" alt="On-Nūm"><img src="images/mc-on-num-hover.png" alt="On-Nūm">On-Nūm</a></h2>
