--- a/html-dev/about.html
+++ b/html-dev/about.html
@@ -4,17 +4,17 @@
 
 		<figure><img src="images/ajahn-tong.jpg">Ven. Ajan Tong Sirimangalo</figure><p>One Way Path Group is part of a <a href="images/affiliates.pdf">network of meditation centres and temples</a> run by students of the late Venerable Ajahn Tong Sirimangalo (Ajahn Tong). We operate under the spritual direction of Ajahn Tong, Venerable Ajahn Dhammo Tach Troung of the Khmer Krom Buddhist Temple in Stoney Creek, Ontario and Ajahn Tong's senior diciples, Thanat Chindaporn and Kathryn Johnston Chindaporn.</p> 
 
-	<h3>The Buddha's Teachings on Mental Noting</h3>
+	<!-- h3>The Buddha's Teachings on Mental Noting</h3 -->
 
 		<p> The signifacnce of Ajahn Tong's teachings is currenly under reported in popular media but his contribution, and that of Thanat and Kathryn Chindaporn, to the field of Buddhist meditation are among the word's most significant of recent times.</p>
 
 		<p>Over the centuries after the death of the Buddha, some of his most imporant teachings on meditation fell into obscurity within Buddhist communities. At the same time, the concept of mindfulness as a spritual practice began to diverge from those same specific teachings of the Buddha. The divergence is likely to have occured because of the inaccessability of teachings in their original language, Pali, and the limited size of the monastic communities in which the practice had been kept up as an oral tradition.</p>
 
-	<h3> The Mahasi Sayadaw </h3>	
+	<!-- h3> The Mahasi Sayadaw </h3-->	
 
 	<p>However, at the turn of the 20th century, a Burmese monastic teacher known as the Mahasi Sayadaw began reviving these lost teachings. The teachings consisted of mental noting as central to the Buddha's defintion of mindfulness. Although the instruction for mental noting -- as an imperative of mindfulness rather than an optional component -- is prolific throughout the written text of the Buddha's words, the Pali term which represents it "Satima" had not been correctly translated. Furthermore, markers of a successful insight meditation practice known as the Stages of Insight Knowledge had been relegeted to the status of mere commentary on the text when in fact the Buddha had given the the Stages of Insight Knowledge pride of place winthin the first few words he spoke after attaining enlightenment. Again, recognition of the importantance of the Stages of Insight Knowledge fell into abyeance because the Pali language had not been properly translated into the western the vernacular. </p>
 
-	<h3> The Importance of Ajahn Tong </h3>
+	<!-- h3> The Importance of Ajahn Tong </h3 -->
 
 	<p>The Mahasi Sayada's invaluable work in reviving the Buddha's Insight Meditation Teachings was successful in reigniting the practice in Myannmar (Burma) and his teaching spread to other Buddhist countries including Thailand. However, the practice still remainded somewhat inaccessible to westerners because of the long time periods that were required to engage with the practice and its location in Myannmar which is less popular as a tourist destination. Furtunately, during the lifetime of the Mahasi Sayadaw, Ajahn Tong gained knowledge of the practice and became proficient in it to the extent that only a few weeks of practice is now required in order to see dramatic results. Moreover, because of his clear elucidation of the Stages of Insight Knowledge, lay meditation teachers could be trained to recognize correct pratice in students over a few years (rather than decades).</p>
 		
