close meditation links

--- a/html-dev/meditation.html
+++ b/html-dev/meditation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 	<p>One Way Path Group operates Buddhavipassana Meditation Centre in Toronto, Ontario (Canada) and is developing On-Nūm Meditation Center in Lieberose, Germany (near Berlin)</p>
-		<h2><a href="buddhavipassana/courses"><img src="images/mc-buddhavipassana.png" alt="Buddhavipassana"><img src="images/mc-buddhavipassana-hover.png" alt="Buddhavipassana">Buddhavipassana</a></h2>
-		<h2><a href="on-num/courses" ><img src="images/mc-on-num.png" alt="On-Nūm"><img src="images/mc-on-num-hover.png" alt="On-Nūm">On-Nūm</a></h2>
+		<h2><a href="https://buddhavipassana.ca"><img src="images/mc-buddhavipassana.png" alt="Buddhavipassana"><img src="images/mc-buddhavipassana-hover.png" alt="Buddhavipassana">Buddhavipassana</a></h2>
+		<h2><a href="./meditation" ><img src="images/mc-on-num.png" alt="On-Nūm"><img src="images/mc-on-num-hover.png" alt="On-Nūm">On-Nūm</a></h2>
