--- a/html-dev/atisundara/contact-us.html
+++ b/html-dev/atisundara/contact-us.html
@@ -1,8 +1,7 @@
 <!doctype html>
-
-<!-- <h2>Contact</h2> -->
-
-	<p>Lieberose, Markt 8</p>
-	<p>Brandenburg, Germany  15868</p>
-	<p><b>E-Mail:</b> info@on-num.de</p>
-	<p><b>Phone:</b> +49 (0) (33671) 143-996</p>
+	<p>46 Tyrrel Avenue</p>
+	<p>Toronto, Ontario</p>
+	<p>Canada  M6G 2G2</p>
+	<p><b>E-Mail:</b> atisundara@onewaypath.com</p>
+	<p><b>Phone:</b> +1 416.848.1746</p>
+	<p><b>Fax:</b> +1 416.848.1162</p>
