revisions for atisundara

--- a/html-dev/atisundara/chomtong.html
+++ b/html-dev/atisundara/chomtong.html
@@ -19,7 +19,7 @@
 <p> The International Section of the Northern Vipassana Insight Meditation Center in Chomtong, Thailand consists of 19 buildings containing two air conditioned meditation halls, a library, 36 residential rooms for meditators and 16 rooms for teachers, training teachers and assistants. The center regularly engages 21 Thai nationals locally to provide contracted services such as cleaning, maintenance and construction. Standard meditation retreats are 21-days for beginniers and 10-days for intermediate/advanced meditators. </p>
 
 <h2>May 2021 Expense Summary</h2>
-<table>
+<!--<table>
 <tr><td>Expense</td><td>Thai Baht</td><td>CA Dollars</td><td>US Dollars</td><td>Note</td></tr>
 <tr><td>Award Costs</td><td>40,000.00</td><td>1,545.60</td><td>1,279.59</td><td>1</td></tr>
 <tr><td>Cleaning & Maintenance</td><td>58,060.00</td><td>2,243.43</td><td>1,857.33</td><td></td></tr>
@@ -29,12 +29,22 @@
 <tr><td>New Construction</td><td>43,710.00</td><td>1,688.95</td><td>1,398.27</td><td>4</td></tr>
 <tr><td>Office Administration</td><td>71,020.00</td><td>2,744.20</td><td>2,271.91</td><td></td></tr>
 <tr><td>Total</td><td>417,479.00</td><td>16,131.34</td><td>13,355.05</td><td></td></tr>
+</table>-->
+
+<table>
+<tr><td>Expense</td><td>US Dollars</td><td>Note</td></tr>
+<tr><td>Award Costs</td><td>1,279.59</td><td>1</td></tr>
+<tr><td>Cleaning & Maintenance</td><td>1,857.33</td><td></td></tr>
+<tr><td>Donations for Monks & Nuns</td><td>2,367.24</td><td>2</td></tr>
+<tr><td>Electricity</td><td>863.72</td><td></td></tr>
+<tr><td>New Construction</td><td>1,398.27</td><td>3</td></tr>
+<tr><td>Office Administration</td><td>2,271.91</td><td></td></tr>
+<tr><td>Total</td><td>10,358.07</td><td></td></tr>
 </table>
 
 <ol>
 	Notes
 	<li>The Thai provincial govermnent in Chiangmai and federal government in Bangkok hands out awards for deserving meditation teachers who are benefactors of the Buddhist religion. Certain costs are incurred once per year by the meditation center to sponsor awards being received by its teachers, assistants and other nominees.</li>
-	<li>The co-directors live full time at the meditation center without remuneration except for donations. Therefore, the center provides regular amounts to the directors to cover their living costs.</li>
 	<li>A critical feature of the center is its affliation with the Chomtong Temple and Monastery. In order to ensure the conntinued integration with the Temple and to support the development of accomplished and promosing monastics, the meditation center provides regular financial support for monks and nuns.</li>
 	<li>The meditation center is continuing to expand to meet growing demand for insight meditation instruction.</li>
 </ol>
