--- a/Public/emailTemplates/emailTemplate.html
+++ b/Public/emailTemplates/emailTemplate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>What to Do When We're Overwhelmed</title>
+	<title>Buddhavipassana Newsletter</title>
 	<style>
 		
 
@@ -103,7 +103,7 @@
 		
 	<tr><td class="specialAnnouncement">
 	<section>
-		<p><b>Special Announcement:</b> The Buddhavipassana Meditation Centre is operating under restrictions due to the COVID-19 pandemic. Our current restrictions are described in more detail below.</p>
+		<p><b>Special Announcement:</b> The Buddhavipassana Meditation Centre is operating under restrictions due to the COVID-19 pandemic.</p>
 		<!--p><b>Special Announcement:</b> The Buddhavipassana Meditation Centre is currently open for one student at a time during the COVID-19 Emergency Period. We are offering retreats by appointment two cases: 1) students who have completed the basic course and wish to undertake a 10-day retreat and 2) students who wish to undertake a 15-day basic course.</p -->
 	</section>
 	</td></tr>
