--- a/html-dev/about.html
+++ b/html-dev/about.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-	<h2>About One Way Path Group</h2>
+	<h3>Overview</h3>
 
-		<figure><img src="images/ajahn-tong.jpg">Ven. Ajan Tong Sirimangalo</figure><p>One Way Path Group is part of a <a href="images/affiliates.pdf">network of meditation centres and temples</a> run by students of the late Venerable Ajahn Tong Sirimangalo (Ajahn Tong). We operate under the spritual direction of Ajahn Tong, Venerable Ajahn Dhammo Tach Troung of the Khmer Krom Buddhist Temple in Stoney Creek, Ontario and Ajahn Tong's senior diciples, Thanat Chindaporn and Kathryn Johnston Chindaporn.</p> 
+		<!-- <figure><img src="images/ajahn-tong.jpg">Ven. Ajan Tong Sirimangalo</figure> --> <p> One Way Path Group Limited ("One Way Path Group") is an international real estate company based in Toronto, Canada committed to building prosperous and peaceful local communities. We build or add to meditation centers and Temples in Canada, Germany and Thailand along with homes for nearby community members. We arrange asset-based loans for socially responsible businesses and funding for early childhood education in priority communities of need.</p> 
+	
+		<h3>Vision</h3>
 
-	<!-- h3>The Buddha's Teachings on Mental Noting</h3 -->
+		<p> The Vision of One Way Path Gorup is to build prosperous and peaceful local communities. We view prosperous communities as communities where needs of survival are met, making room for spirtual development. We view peaceful communities as communities where its members devote their reources to charity and refrain from killing, stealing, adultry, lies, drugs and alcohol.</p>
+
+		<h3>Mission</h3>
+		
+		<p> One Way Path achieves its vision by:</p>
+			
+		<ol>
+			<li> builidng and promiting the growth of Therevada Buddhist Temples and meditation centers; </li>
+			<li> building homes nearby to Buddhist Temples and meditation centers which can be owned by community members;</li>
+			<li> providing services to socially responsible businesses in the following areas: private real-estate based lending, formation of real estate corporations and lilmited partnerships, mergers and acquisition of real estate businesses;</li>
+			<li> funding early childhood education in communities of need including Buddhist education for ordained and non-ordained children and secular education for non-Buddhist children</li>
+		</ol>
+
+		<p> Projects may be located anywhere in the world based on a balanced aassessment of the following:</p> 
+	
+		<ol>
+			<li> demonstrated leadership in insight meditation or otherwise in Therevada Buddhist education and ideals by the community;</li>
+			<li> the presence of an existing Therevada Buddhist community or demonstration of signifcant interest in Therevada Buddhism within the community; </li>
+			<li> Significant demand for the project in the community;</li>
+			<li> Stable and perdictable local government;</li>
+			<li> Symbolic significance of the communnity or location;</li>
+		</ol>
+
+		<h3>Values</h3>
+		
+		<p>One Way Path Group is part of a <a href="images/affiliates.pdf">network of meditation centres and temples</a> run by students of the late Venerable Ajahn Tong Sirimangalo (Ajahn Tong). We operate under the spritual direction of Ajahn Tong, Venerable Ajahn Dhammo Tach Troung of the Khmer Krom Buddhist Temple in Stoney Creek, Ontario, Canada and Ajahn Tong's senior diciples, Thanat Chindaporn and Kathryn Johnston Chindaporn.</p>
+
+		<p>One Way Path Group provides an opportunity for socially responsible investing from a Therevada Buddhist perspective. All corporate projects and investments are screened to exclude profit from weapons, alcohol, recreational drugs or pharmaceuticals, gambling and animal proudcts or animal husbandry.</p>
+
+
+		<h3>Financing and Sources of Funds</h3>
+
+		<p>Financing for One Way Path Gorup projects are generally raised from private sources on a case-by-case basis. Meditation centres are owned privately and their use for meditation retreats is donated by the owner(s). Operational costs for meditation centers are derived from a mix of donations and user fees. Equity and debt financing for home construction is raised on a for-profit basis from individual private investors or companies and homes are sold for profit to Buddhist and non-Buddhist buyers. Funding for early childhood education consists of income derived from One Way Path Group for-profit initiatives or from indvidual private donations made by the owners of One Way Path Group. </p>
+
+
+	<!-- h3>The Buddha's Teachings on Mental Noting</h3
 
 		<p> The signifacnce of Ajahn Tong's teachings is currenly under reported in popular media but his contribution, and that of Thanat and Kathryn Chindaporn, to the field of Buddhist meditation are among the word's most significant of recent times.</p>
 
 		<p>Over the centuries after the death of the Buddha, some of his most imporant teachings on meditation fell into obscurity within Buddhist communities. At the same time, the concept of mindfulness as a spritual practice began to diverge from those same specific teachings of the Buddha. The divergence is likely to have occured because of the inaccessability of teachings in their original language, Pali, and the limited size of the monastic communities in which the practice had been kept up as an oral tradition.</p>
 
-	<!-- h3> The Mahasi Sayadaw </h3-->	
+	<!-- h3> The Mahasi Sayadaw </h3
 
 	<p>However, at the turn of the 20th century, a Burmese monastic teacher known as the Mahasi Sayadaw began reviving these lost teachings. The teachings consisted of mental noting as central to the Buddha's defintion of mindfulness. Although the instruction for mental noting -- as an imperative of mindfulness rather than an optional component -- is prolific throughout the written text of the Buddha's words, the Pali term which represents it "Satima" had not been correctly translated. Furthermore, markers of a successful insight meditation practice known as the Stages of Insight Knowledge had been relegeted to the status of mere commentary on the text when in fact the Buddha had given the the Stages of Insight Knowledge pride of place winthin the first few words he spoke after attaining enlightenment. Again, recognition of the importantance of the Stages of Insight Knowledge fell into abyeance because the Pali language had not been properly translated into the western the vernacular. </p>
 
-	<!-- h3> The Importance of Ajahn Tong </h3 -->
+	<!-- h3> The Importance of Ajahn Tong </h3
 
 	<p>The Mahasi Sayada's invaluable work in reviving the Buddha's Insight Meditation Teachings was successful in reigniting the practice in Myannmar (Burma) and his teaching spread to other Buddhist countries including Thailand. However, the practice still remainded somewhat inaccessible to westerners because of the long time periods that were required to engage with the practice and its location in Myannmar which is less popular as a tourist destination. Furtunately, during the lifetime of the Mahasi Sayadaw, Ajahn Tong gained knowledge of the practice and became proficient in it to the extent that only a few weeks of practice is now required in order to see dramatic results. Moreover, because of his clear elucidation of the Stages of Insight Knowledge, lay meditation teachers could be trained to recognize correct pratice in students over a few years (rather than decades).</p>
 		
-	<p>During the years of his life, Ajahn Tong succeeded in building up a large meditation centre at the Chomtong Temple and Monestary, approximately one hour south of Chiang Mai, Thailand. Senior lay deciples of Ajahn Tong, Thanat Chindaporn and Kathryn Johnston Chindaporn also became proficient in the practice and built up a network of meditation centres throughout the world to ensure that the practice remains accessible for all human kind in the years to come. One Way Path Group was started by Sandra, Alex and Miriam Young in 2018 to contribute to this work initially at the Buddhavipassana Meditation Centre in Toronto and On-Nūm Meditation Centre in Lieberose, Germany (approximately 120 km south east of Berlin). As part of the work of developing meditiation facilities, One Way Path Group builds homes for Buddhist communities, led by plans to build the first of such communities in Stoney Creek, Ontario in the area surrounding the Khmer Krom Buddhist Temple under the spiritual guidance of its Abbot, Venerable Dhammo Tach Truong.</p>
+	<p>During the years of his life, Ajahn Tong succeeded in building up a large meditation centre at the Chomtong Temple and Monestary, approximately one hour south of Chiang Mai, Thailand. Senior lay deciples of Ajahn Tong, Thanat Chindaporn and Kathryn Johnston Chindaporn also became proficient in the practice and built up a network of meditation centres throughout the world to ensure that the practice remains accessible for all human kind in the years to come. One Way Path Group was started by Sandra, Alex and Miriam Young in 2018 to contribute to this work initially at the Buddhavipassana Meditation Centre in Toronto and On-Nūm Meditation Centre in Lieberose, Germany (approximately 120 km south east of Berlin). As part of the work of developing meditiation facilities, One Way Path Group builds homes for Buddhist communities, led by plans to build the first of such communities in Stoney Creek, Ontario in the area surrounding the Khmer Krom Buddhist Temple under the spiritual guidance of its Abbot, Venerable Dhammo Tach Truong.</p> -->
 		 
