fix typos on about page

--- a/html-dev/about.html
+++ b/html-dev/about.html
@@ -15,17 +15,17 @@
 		<ol>
 			<li> builidng and promiting the growth of Therevada Buddhist Temples and meditation centers; </li>
 			<li> building homes nearby to Buddhist Temples and meditation centers which can be owned by community members;</li>
-			<li> providing services to socially responsible businesses in the following areas: private real-estate based lending, formation of real estate corporations and lilmited partnerships, mergers and acquisition of real estate businesses;</li>
+			<li> providing services to socially responsible businesses in the following areas: private real-estate based lending, formation of real estate corporations and limited partnerships, mergers and acquisition of real estate businesses;</li>
 			<li> funding early childhood education in communities of need including Buddhist education for ordained and non-ordained children and secular education for non-Buddhist children</li>
 		</ol>
 
-		<p> Projects may be located anywhere in the world based on a balanced aassessment of the following:</p> 
+		<p> Projects may be located anywhere in the world based on a balanced assessment of the following:</p> 
 	
 		<ol>
 			<li> demonstrated leadership in insight meditation or otherwise in Therevada Buddhist education and ideals by the community;</li>
 			<li> the presence of an existing Therevada Buddhist community or demonstration of signifcant interest in Therevada Buddhism within the community; </li>
 			<li> Significant demand for the project in the community;</li>
-			<li> Stable and perdictable local government;</li>
+			<li> Stable and predictable local government;</li>
 			<li> Symbolic significance of the communnity or location;</li>
 		</ol>
 
@@ -38,7 +38,7 @@
 
 		<h3>Financing and Sources of Funds</h3>
 
-		<p>Financing for One Way Path Gorup projects are generally raised from private sources on a case-by-case basis. Meditation centres are owned privately and their use for meditation retreats is donated by the owner(s). Operational costs for meditation centers are derived from a mix of donations and user fees. Equity and debt financing for home construction is raised on a for-profit basis from individual private investors or companies and homes are sold for profit to Buddhist and non-Buddhist buyers. Funding for early childhood education consists of income derived from One Way Path Group for-profit initiatives or from indvidual private donations made by the owners of One Way Path Group. </p>
+		<p>Financing for One Way Path Group projects are generally raised from private sources on a case-by-case basis. Meditation centres are owned privately and their use for meditation retreats is donated by the owner(s). Operational costs for meditation centers are derived from a mix of donations and user fees. Equity and debt financing for home construction is raised on a for-profit basis from individual private investors or companies and homes are sold for profit to Buddhist and non-Buddhist buyers. Funding for early childhood education consists of income derived from One Way Path Group for-profit initiatives or from indvidual private donations made by the owners of One Way Path Group. </p>
 
 
 	<!-- h3>The Buddha's Teachings on Mental Noting</h3
