fix typo on About page

--- a/html-dev/about.html
+++ b/html-dev/about.html
@@ -6,7 +6,7 @@
 	
 		<h3>Vision</h3>
 
-		<p> The Vision of One Way Path Gorup is to build prosperous and peaceful local communities. We view prosperous communities as communities where needs of survival are met, making room for spirtual development. We view peaceful communities as communities where its members devote their reources to charity and refrain from killing, stealing, adultry, lies, drugs and alcohol.</p>
+		<p> The Vision of One Way Path Group is to build prosperous and peaceful local communities. We view prosperous communities as communities where needs of survival are met, making room for spirtual development. We view peaceful communities as communities where its members devote their reources to charity and refrain from killing, stealing, adultry, lies, drugs and alcohol.</p>
 
 		<h3>Mission</h3>
 		
