revise About page

--- a/html-dev/about.html
+++ b/html-dev/about.html
@@ -22,7 +22,7 @@
 		<p> Projects may be located anywhere in the world based on a balanced assessment of the following:</p> 
 	
 		<ol>
-			<li> demonstrated leadership in insight meditation or otherwise in Therevada Buddhist education and ideals by the community;</li>
+			<li> demonstrated leadership by the community in insight meditation or other Therevada Buddhist education;</li>
 			<li> the presence of an existing Therevada Buddhist community or demonstration of signifcant interest in Therevada Buddhism within the community; </li>
 			<li> Significant demand for the project in the community;</li>
 			<li> Stable and predictable local government;</li>
