--- a/Public/emailTemplates/emailTemplate.html
+++ b/Public/emailTemplates/emailTemplate.html
@@ -99,15 +99,15 @@
 	</header>
 	</td></tr>
 	
-	<tr><td class ="spacer-1"></td></tr>
+	<!--<tr><td class ="spacer-1"></td></tr>
 		
 	<tr><td class="specialAnnouncement">
-	<!--<section>
+	<section>
 		<p><b>Special Announcement:</b> The Buddhavipassana Meditation Centre is operating under restrictions due to the COVID-19 pandemic.</p>
 		p><b>Special Announcement:</b> The Buddhavipassana Meditation Centre is currently open for one student at a time during the COVID-19 Emergency Period. We are offering retreats by appointment two cases: 1) students who have completed the basic course and wish to undertake a 10-day retreat and 2) students who wish to undertake a 15-day basic course.</p>
-	</section> -->
+	</section>
 	</td></tr>
-	<tr><td class="spacer-2"></td></tr>
+	<tr><td class="spacer-2"></td></tr> -->
 		
 	<tr><td class="mainContent">
 		<section>
